Fix: Banner logo layout bug

--- a/assets/css/templatemo.css
+++ b/assets/css/templatemo.css
@@ -75,7 +75,7 @@ body, ul, li, p, a, label, input, div {
 #templatemo_main_nav .navbar .nav-icon { margin-right: 20px;}
 
 /* Hero Carousel */
-#template-mo-zay-hero-carousel { background: #efefef !important;}
+#home_banner { background: #efefef !important;}
 /* Accordion */
 .templatemo-accordion a { color: #000;}
 .templatemo-accordion a:hover { color: #333d4a;}
@@ -115,12 +115,12 @@ body, ul, li, p, a, label, input, div {
   opacity: 1;
 }
 /* Carousel Hero */
-#template-mo-zay-hero-carousel .carousel-indicators li {
+#home_banner .carousel-indicators li {
   margin-top: -50px;
   background-color: #59ab6e;
 }
-#template-mo-zay-hero-carousel .carousel-control-next i,
-#template-mo-zay-hero-carousel .carousel-control-prev i {
+#home_banner .carousel-control-next i,
+#home_banner .carousel-control-prev i {
   color: #59ab6e !important;
   font-size: 2.8em !important;
 }
@@ -179,7 +179,7 @@ body, ul, li, p, a, label, input, div {
 /* Large devices (desktops, 992px and up)*/
 @media (min-width: 992px) {
   #templatemo_main_nav .navbar-nav {max-width: 550px;}
-  #template-mo-zay-hero-carousel .carousel-item {min-height: 30rem !important;}
+  #home_banner .carousel-item {min-height: 30rem !important;}
   .product-wap .h3, .product-wap li, .product-wap i, .product-wap p {font-size: 18px !important;}
   .product-wap .product-color-dot {
     width: 12px;
